// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payouts-list-core displays an error state on failed data fetch 1`] = `
<payouts-list-core>
  <div>
    <payouts-list-filters>
      <table-filters-menu>
        <!---->
        <div class="d-flex gap-2">
          <div class="dropdown pb-3">
            <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" data-test-id="open-filters-button" part="button button-primary" type="button dropdown-toggle" variant="primary">
              Filters
            </button>
            <custom-popper strategy="fixed" trigger="click">
              <form class="dropdown-menu" data-test-id="filter-menu" part="dropdown-menu">
                <div class="gap-3 grid-cols-2 p-1">
                  <div class="p-2">
                    <form-control-date filtertimezone="" label="Start Date" name="created_after" showtime=""></form-control-date>
                  </div>
                  <div class="p-2">
                    <form-control-date filtertimezone="" label="End Date" name="created_before" showtime=""></form-control-date>
                  </div>
                </div>
              </form>
            </custom-popper>
          </div>
          <div>
            <button class="btn btn-secondary" data-test-id="clear-filters-button" hidden="" part="button button-secondary" variant="secondary">
              Clear Filters
            </button>
          </div>
        </div>
      </table-filters-menu>
    </payouts-list-filters>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The date the payout was deposited">
              Created
            </th>
            <th part="table-head-cell" scope="col" title="The total amount of the payout">
              Amount
            </th>
            <th part="table-head-cell" scope="col" title="The real-time status of each payout">
              Status
            </th>
            <th part="table-head-cell" scope="col" title="The total payments amount associated with the payout">
              Payments
            </th>
            <th part="table-head-cell" scope="col" title="The total refunds amount associated with the payout">
              Refunds
            </th>
            <th part="table-head-cell" scope="col" title="The total fees amount associated with the payout">
              Fees
            </th>
            <th part="table-head-cell" scope="col" title="The total other amount">
              Other
            </th>
            <th part="table-head-cell" scope="col" title="Export CSV"></th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr>
            <td class="error-state" colspan="8" data-test-id="table-error-state" part="error-state" style="text-align: center;">
              An unexpected error occurred: Fetch error
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="8" part="pagination-bar">
              <pagination-menu exportparts="page-arrow,page-button,page-button-disabled,page-button-text">
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-button page-button-disabled">
                        <span class="me-1" part="page-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-button page-button-disabled">
                        <span part="page-button-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</payouts-list-core>
`;

exports[`payouts-list-core renders properly 1`] = `
<payouts-list-core>
  <div>
    <payouts-list-filters>
      <table-filters-menu>
        <!---->
        <div class="d-flex gap-2">
          <div class="dropdown pb-3">
            <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" data-test-id="open-filters-button" part="button button-primary" type="button dropdown-toggle" variant="primary">
              Filters
            </button>
            <custom-popper strategy="fixed" trigger="click">
              <form class="dropdown-menu" data-test-id="filter-menu" part="dropdown-menu">
                <div class="gap-3 grid-cols-2 p-1">
                  <div class="p-2">
                    <form-control-date filtertimezone="" label="Start Date" name="created_after" showtime=""></form-control-date>
                  </div>
                  <div class="p-2">
                    <form-control-date filtertimezone="" label="End Date" name="created_before" showtime=""></form-control-date>
                  </div>
                </div>
              </form>
            </custom-popper>
          </div>
          <div>
            <button class="btn btn-secondary" data-test-id="clear-filters-button" hidden="" part="button button-secondary" variant="secondary">
              Clear Filters
            </button>
          </div>
        </div>
      </table-filters-menu>
    </payouts-list-filters>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The date the payout was deposited">
              Created
            </th>
            <th part="table-head-cell" scope="col" title="The total amount of the payout">
              Amount
            </th>
            <th part="table-head-cell" scope="col" title="The real-time status of each payout">
              Status
            </th>
            <th part="table-head-cell" scope="col" title="The total payments amount associated with the payout">
              Payments
            </th>
            <th part="table-head-cell" scope="col" title="The total refunds amount associated with the payout">
              Refunds
            </th>
            <th part="table-head-cell" scope="col" title="The total fees amount associated with the payout">
              Fees
            </th>
            <th part="table-head-cell" scope="col" title="The total other amount">
              Other
            </th>
            <th part="table-head-cell" scope="col" title="Export CSV"></th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr data-row-entity-id="po_1a2b3c4d5e6f7g8h9i0j" data-test-id="table-row" part="table-row table-row-odd">
            <td>
              <div class="fw-bold">
                Jan 18, 2024
              </div>
            </td>
            <td>
              $226.02
            </td>
            <td>
              <span class="badge bg-success" title="Successfully deposited into your bank account">
                Paid
              </span>
            </td>
            <td>
              $234.56
            </td>
            <td>
              $0.00
            </td>
            <td>
              $8.54
            </td>
            <td>
              $0.00
            </td>
            <td>
              <a href="#">
                CSV
              </a>
            </td>
          </tr>
          <tr data-row-entity-id="po_2b3c4d5e6f7g8h9i0j1a" data-test-id="table-row" part="table-row table-row-even">
            <td>
              <div class="fw-bold">
                Jan 17, 2024
              </div>
            </td>
            <td>
              $226.02
            </td>
            <td>
              <span class="badge bg-secondary" title="This payout initially failed; the funds have been forwarded to your next successful payout">
                Forwarded
              </span>
            </td>
            <td>
              $234.56
            </td>
            <td>
              $0.00
            </td>
            <td>
              $8.54
            </td>
            <td>
              $0.00
            </td>
            <td>
              <a href="#">
                CSV
              </a>
            </td>
          </tr>
          <tr data-row-entity-id="po_3c4d5e6f7g8h9i0j1a2b" data-test-id="table-row" part="table-row table-row-odd">
            <td>
              <div class="fw-bold">
                Jan 10, 2024
              </div>
            </td>
            <td>
              $226.02
            </td>
            <td>
              <span class="badge bg-primary" title="Transfer to your bank account has been initiated">
                In Transit
              </span>
            </td>
            <td>
              $234.56
            </td>
            <td>
              $0.00
            </td>
            <td>
              $8.54
            </td>
            <td>
              $0.00
            </td>
            <td>
              <a href="#">
                CSV
              </a>
            </td>
          </tr>
          <tr data-row-entity-id="po_4d5e6f7g8h9i0j1a2b3c" data-test-id="table-row" part="table-row table-row-even">
            <td>
              <div class="fw-bold">
                Dec 28, 2023
              </div>
            </td>
            <td>
              $220.15
            </td>
            <td>
              <span class="badge bg-primary" title="Batched and scheduled to be transferred">
                Scheduled
              </span>
            </td>
            <td>
              $245.00
            </td>
            <td>
              ($10.00)
            </td>
            <td>
              $14.85
            </td>
            <td>
              $0.00
            </td>
            <td>
              <a href="#">
                CSV
              </a>
            </td>
          </tr>
          <tr data-row-entity-id="po_5e6f7g8h9i0j1a2b3c4d" data-test-id="table-row" part="table-row table-row-odd">
            <td>
              <div class="fw-bold">
                Dec 28, 2023
              </div>
            </td>
            <td>
              $220.15
            </td>
            <td>
              <span class="badge bg-danger" title="Transfer to your bank account failed">
                Canceled
              </span>
            </td>
            <td>
              $245.00
            </td>
            <td>
              ($10.00)
            </td>
            <td>
              $14.85
            </td>
            <td>
              $0.00
            </td>
            <td>
              <a href="#">
                CSV
              </a>
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="8" part="pagination-bar">
              <pagination-menu exportparts="page-arrow,page-button,page-button-disabled,page-button-text">
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-button page-button-disabled">
                        <span class="me-1" part="page-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-button page-button-disabled">
                        <span part="page-button-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</payouts-list-core>
`;
